10 times cross validating

--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -182,15 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for rfe \n",
     "from sklearn.feature_selection import RFE\n",
-    "def rfe_feature_selection(algo,X,y,n_feature_selection,step):\n",
-    "  rfe=RFE(algo,n_features_to_select=n_feature_selection,step=step)\n",
-    "  return rfe.fit(X,y)"
+    "def rfe_feature_selection(algo,X,y):\n",
+    "  rfe=RFE(estimator=algo).fit(X,y)\n",
+    "  rfe_sel_index=rfe.get_support(indices=True)\n",
+    "  return rfe_sel_index"
    ]
   },
   {
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,13 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(822,)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
-    "svc_model = rfe_feature_selection(SVC(kernel='linear'), train_x_scaled, train_y, 1000, 10)\n",
-    "sel_feat_idx=svc_model.get_support(indices=True)"
+    "svc_feat_index = rfe_feature_selection(SVC(kernel='linear'), train_x_scaled, train_y)\n",
+    "svc_feat_index.shape"
    ]
   },
   {
@@ -241,31 +253,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "def test_score(model):\n",
+    "    sel_feat_idx=rfe_feature_selection(model, train_x_scaled, train_y, 1000, 10).get_support(indices=True)\n",
+    "    model.fit(np.take(train_x_scaled,sel_feat_idx,axis=1),train_y)\n",
+    "    test_x_scaled = x_scaled.transform(test_x)\n",
+    "    test_x_scaled_sel=np.take(test_x_scaled,sel_feat_idx,axis=1)\n",
+    "    y_pred=model.predict(test_x_scaled_sel)\n",
+    "    y_pred=np.where(y_pred>0.5,1,0)\n",
+    "    return accuracy_score(test_y,y_pred)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.6153846153846154"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression - 0.5961538461538461\n",
+      "SVC - 0.6153846153846154\n",
+      "DecisionTreeClassifier - 0.5961538461538461\n",
+      "XGBClassifier - 0.5576923076923077\n"
+     ]
     }
    ],
    "source": [
-    "svc=SVC(kernel='linear')\n",
-    "svc.fit(np.take(train_x_scaled,sel_feat_idx,axis=1),train_y)\n",
-    "\n",
-    "test_x_scaled = x_scaled.transform(test_x)\n",
-    "test_x_scaled_sel=np.take(test_x_scaled,sel_feat_idx,axis=1)\n",
-    "\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "y_pred=svc.predict(test_x_scaled_sel)\n",
-    "y_pred=np.where(y_pred>0.5,1,0)\n",
-    "accuracy_score(test_y,y_pred)\n"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import xgboost as xgb\n",
+    "models_list=[LogisticRegression(max_iter=1000),\n",
+    "             SVC(kernel='linear'),\n",
+    "             DecisionTreeClassifier(),\n",
+    "             xgb.XGBClassifier(objective=\"binary:logistic\", random_state=42)] \n",
+    "for model in models_list:\n",
+    "    name=str(model).split('(')[0]\n",
+    "    score=str(test_score(model))\n",
+    "    print(name+' - '+score)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVC performs more accuracy on test data in one split"
    ]
   },
   {
@@ -278,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,58 +336,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### List of Models\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.\n",
+    "models_list=[LogisticRegression(),SVC(kernel='linear')] \n",
+    "\n",
+    "### DataFrame of accuracies for all model wrt cross validation\n",
+    "# df_acc=pd.DataFrame(columns=[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross Validation on 10Folds\n",
-      "validation acc - 0.6190476190476191\n",
-      "Test acc - 0.5769230769230769\n",
-      "validation acc - 0.5238095238095238\n",
-      "Test acc - 0.5384615384615384\n",
-      "validation acc - 0.5714285714285714\n",
-      "Test acc - 0.6153846153846154\n",
-      "validation acc - 0.47619047619047616\n",
-      "Test acc - 0.5576923076923077\n",
-      "validation acc - 0.7\n",
-      "Test acc - 0.5961538461538461\n",
-      "validation acc - 0.5\n",
-      "Test acc - 0.5576923076923077\n",
-      "validation acc - 0.5\n",
-      "Test acc - 0.5769230769230769\n",
-      "validation acc - 0.5\n",
-      "Test acc - 0.5384615384615384\n",
-      "validation acc - 0.6\n",
-      "Test acc - 0.6730769230769231\n",
-      "validation acc - 0.7\n",
-      "Test acc - 0.5961538461538461\n"
+      "Cross Validation on 10Folds\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <th>SVM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.619048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.519231</td>\n",
+       "      <td>0.576923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.523810</td>\n",
+       "      <td>0.523810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.557692</td>\n",
+       "      <td>0.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">3</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.523810</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.596154</td>\n",
+       "      <td>0.615385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.476190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.576923</td>\n",
+       "      <td>0.557692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">5</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>0.596154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">6</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.576923</td>\n",
+       "      <td>0.557692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">7</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.557692</td>\n",
+       "      <td>0.576923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">8</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.538462</td>\n",
+       "      <td>0.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">9</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.634615</td>\n",
+       "      <td>0.673077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">10</th>\n",
+       "      <th>Validation Accuracy</th>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <td>0.557692</td>\n",
+       "      <td>0.596154</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Logistic Regression       SVM\n",
+       "1  Validation Accuracy             0.666667  0.619048\n",
+       "   Test Accuracy                   0.519231  0.576923\n",
+       "2  Validation Accuracy             0.523810  0.523810\n",
+       "   Test Accuracy                   0.557692  0.538462\n",
+       "3  Validation Accuracy             0.523810  0.571429\n",
+       "   Test Accuracy                   0.596154  0.615385\n",
+       "4  Validation Accuracy             0.428571  0.476190\n",
+       "   Test Accuracy                   0.576923  0.557692\n",
+       "5  Validation Accuracy             0.500000  0.700000\n",
+       "   Test Accuracy                   0.615385  0.596154\n",
+       "6  Validation Accuracy             0.650000  0.500000\n",
+       "   Test Accuracy                   0.576923  0.557692\n",
+       "7  Validation Accuracy             0.550000  0.500000\n",
+       "   Test Accuracy                   0.557692  0.576923\n",
+       "8  Validation Accuracy             0.500000  0.500000\n",
+       "   Test Accuracy                   0.538462  0.538462\n",
+       "9  Validation Accuracy             0.500000  0.600000\n",
+       "   Test Accuracy                   0.634615  0.673077\n",
+       "10 Validation Accuracy             0.650000  0.700000\n",
+       "   Test Accuracy                   0.557692  0.596154"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import StratifiedKFold,cross_val_score\n",
-    "k=10\n",
-    "kfd=StratifiedKFold(n_splits=k)\n",
-    "print(\"Cross Validation on \"+str(k)+\"Folds\")\n",
+    "model_names=['Logistic Regression','SVM']\n",
+    "acc_list=['Validation Accuracy','Test Accuracy']\n",
+    "cv=10\n",
+    "kfd=StratifiedKFold(n_splits=cv)\n",
+    "print(\"Cross Validation on \"+str(cv)+\"Folds\")\n",
+    "df_model_acc=pd.DataFrame(columns=model_names,index=[[0,0],acc_list])\n",
+    "k=0\n",
     "for train_idx,val_idx in kfd.split(train_x_scaled_sel,train_y):\n",
+    "    \n",
     "    x_train = np.take(train_x_scaled_sel,train_idx,axis=0)\n",
     "    x_val = np.take(train_x_scaled_sel,val_idx,axis=0)\n",
     "    y_train = np.take(train_y,train_idx,axis=0)\n",
     "    y_val = np.take(train_y,val_idx,axis=0)\n",
+    "    val_accuracies=[]\n",
+    "    test_accuracies=[]\n",
+    "    \n",
+    "    for model in models_list:\n",
+    "        history = model.fit(x_train,y_train)\n",
+    "        y_pred = history.predict(x_val)\n",
+    "        val_acc = accuracy_score(y_val,y_pred)\n",
+    "        # print(\"validation acc - \" + str(acc))\n",
     "\n",
-    "    history = SVC(kernel='linear').fit(x_train,y_train)\n",
-    "    y_pred = history.predict(x_val)\n",
-    "    acc = accuracy_score(y_val,y_pred)\n",
-    "    print(\"validation acc - \" + str(acc))\n",
-    "\n",
-    "    y_pred_test=history.predict(test_x_scaled_sel)\n",
-    "    # y_pred_test=np.where(y_pred_test>0.5,1,0)\n",
-    "    test_acc = accuracy_score(test_y,y_pred_test)\n",
-    "    print(\"Test acc - \" + str(test_acc))"
+    "        y_pred_test=history.predict(test_x_scaled_sel)\n",
+    "        # y_pred_test=np.where(y_pred_test>0.5,1,0)\n",
+    "        test_acc = accuracy_score(test_y,y_pred_test)\n",
+    "        # print(\"Test acc - \" + str(test_acc))\n",
+    "        val_accuracies.append(val_acc)\n",
+    "        test_accuracies.append(test_acc)\n",
+    "        \n",
+    "    df_model_acc=pd.concat([df_model_acc,\n",
+    "                            pd.DataFrame(columns=model_names,\n",
+    "                                         data=[val_accuracies,test_accuracies],\n",
+    "                                         index=[[k+1,k+1],acc_list])])\n",
+    "    k+=1\n",
+    "df_model_acc[2:]\n",
+    "    "
    ]
   }
  ],
