--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "(256, 1644)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
    "source": [
     "### Reducing features using Variance Threshold\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "vt=VarianceThreshold()\n",
+    "vt=VarianceThreshold(threshold=0)\n",
     "vt.fit(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt=vt.transform(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt.shape"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for rfe \n",
     "from sklearn.feature_selection import RFE\n",
     "def rfe_feature_selection(algo,X,y):\n",
-    "  rfe=RFE(estimator=algo).fit(X,y)\n",
+    "  rfe=RFE(estimator=algo,n_features_to_select=1000,step=10).fit(X,y)\n",
     "  rfe_sel_index=rfe.get_support(indices=True)\n",
     "  return rfe_sel_index"
    ]
@@ -204,13 +204,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "x_scaled = StandardScaler().fit(train_x)\n",
-    "train_x_scaled = x_scaled.transform(train_x)"
+    "train_x_scaled = x_scaled.transform(train_x)\n",
+    "test_x_scaled=x_scaled.transform(test_x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Cross Validation**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross validating the training data for getting indexes of the features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.svm import SVC\n",
+    "k_folds=10\n",
+    "cv_sel_idx_list=[]\n",
+    "skfold=StratifiedKFold(n_splits=k_folds,random_state=42,shuffle=True)\n",
+    "for train_idx,val_idx in skfold.split(train_x_scaled,train_y):\n",
+    "    x_train = np.take(train_x_scaled,train_idx,axis=0) # This train is the train set in validation\n",
+    "    x_val = np.take(train_x_scaled,val_idx,axis=0)\n",
+    "    y_train = np.take(train_y,train_idx,axis=0)\n",
+    "    y_val = np.take(train_y,val_idx,axis=0)\n",
+    "    cv_sel_idx=rfe_feature_selection(SVC(kernel='linear'),x_train,y_train)\n",
+    "    cv_sel_idx_list.append(cv_sel_idx)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1531,)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Concatinating the selected indexes from cv_sel_idx_list\n",
+    "concat_sel_idx=cv_sel_idx_list[0]\n",
+    "for i in list(range(1,10)):\n",
+    "    concat_sel_idx=np.concatenate((concat_sel_idx,cv_sel_idx_list[i]))\n",
+    "    \n",
+    "concat_sel_idx=np.unique(concat_sel_idx)\n",
+    "concat_sel_idx.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "k_folds=10\n",
+    "skfold=StratifiedKFold(n_splits=k_folds,random_state=42,shuffle=True)\n",
+    "sel_train_x=np.take(train_x_scaled,concat_sel_idx,axis=1)\n",
+    "sel_test_x=np.take(test_x_scaled,concat_sel_idx,axis=1)\n",
+    "metrics=[]\n",
+    "for train_idx,val_idx in skfold.split(sel_train_x,train_y):\n",
+    "    x_train = np.take(sel_train_x,train_idx,axis=0) # This train is the train set in validation\n",
+    "    x_val = np.take(sel_train_x,val_idx,axis=0)\n",
+    "    y_train = np.take(train_y,train_idx,axis=0)\n",
+    "    y_val = np.take(train_y,val_idx,axis=0)\n",
+    "    model_svc=SVC(kernel='poly',C=0.7)\n",
+    "    model_svc.fit(x_train,y_train)\n",
+    "    pred_val_y=model_svc.predict(x_val)\n",
+    "    pred_test_y=model_svc.predict(sel_test_x)\n",
+    "    metrics.append([accuracy_score(y_val,pred_val_y),\n",
+    "                    accuracy_score(test_y,pred_test_y)])\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.5714285714285714, 0.5961538461538461],\n",
+       " [0.5714285714285714, 0.5769230769230769],\n",
+       " [0.5714285714285714, 0.5961538461538461],\n",
+       " [0.5714285714285714, 0.5961538461538461],\n",
+       " [0.6, 0.5961538461538461],\n",
+       " [0.55, 0.5961538461538461],\n",
+       " [0.6, 0.5961538461538461],\n",
+       " [0.55, 0.5961538461538461],\n",
+       " [0.55, 0.5961538461538461],\n",
+       " [0.55, 0.5961538461538461]]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
    ]
   },
   {
@@ -219,6 +340,26 @@
    "metadata": {},
    "source": [
     "get selected feature idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.5942307692307691 +/- 0.005769230769230783\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics=np.array(metrics)\n",
+    "avg_accuracy=np.mean(metrics,axis=0)\n",
+    "std_accuracy=np.std(metrics,axis=0)\n",
+    "print(\"Accuracy : \"+str(avg_accuracy[1])+\" +/- \"+str(std_accuracy[1]))"
    ]
   },
   {
@@ -238,9 +379,9 @@
     }
    ],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "svc_feat_index = rfe_feature_selection(SVC(kernel='linear'), train_x_scaled, train_y)\n",
-    "svc_feat_index.shape"
+    "\n",
+    "# svc_feat_index = rfe_feature_selection(SVC(kernel='linear'), train_x_scaled, train_y)\n",
+    "# svc_feat_index.shape"
    ]
   },
   {
@@ -264,15 +405,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "def test_score(model):\n",
-    "    sel_feat_idx=rfe_feature_selection(model, train_x_scaled, train_y, 1000, 10).get_support(indices=True)\n",
-    "    model.fit(np.take(train_x_scaled,sel_feat_idx,axis=1),train_y)\n",
-    "    test_x_scaled = x_scaled.transform(test_x)\n",
-    "    test_x_scaled_sel=np.take(test_x_scaled,sel_feat_idx,axis=1)\n",
-    "    y_pred=model.predict(test_x_scaled_sel)\n",
-    "    y_pred=np.where(y_pred>0.5,1,0)\n",
-    "    return accuracy_score(test_y,y_pred)\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# def test_score(model):\n",
+    "#     sel_feat_idx=rfe_feature_selection(model, train_x_scaled, train_y, 1000, 10).get_support(indices=True)\n",
+    "#     model.fit(np.take(train_x_scaled,sel_feat_idx,axis=1),train_y)\n",
+    "#     test_x_scaled = x_scaled.transform(test_x)\n",
+    "#     test_x_scaled_sel=np.take(test_x_scaled,sel_feat_idx,axis=1)\n",
+    "#     y_pred=model.predict(test_x_scaled_sel)\n",
+    "#     y_pred=np.where(y_pred>0.5,1,0)\n",
+    "#     return accuracy_score(test_y,y_pred)\n",
     "\n"
    ]
   },
@@ -293,19 +434,19 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import xgboost as xgb\n",
-    "models_list=[LogisticRegression(max_iter=1000),\n",
-    "             SVC(kernel='linear'),\n",
-    "             DecisionTreeClassifier(),\n",
-    "             xgb.XGBClassifier(objective=\"binary:logistic\", random_state=42)] \n",
-    "for model in models_list:\n",
-    "    name=str(model).split('(')[0]\n",
-    "    score=str(test_score(model))\n",
-    "    print(name+' - '+score)"
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "# import xgboost as xgb\n",
+    "# models_list=[LogisticRegression(max_iter=1000),\n",
+    "#              SVC(kernel='linear'),\n",
+    "#              DecisionTreeClassifier(),\n",
+    "#              xgb.XGBClassifier(objective=\"binary:logistic\", random_state=42)] \n",
+    "# for model in models_list:\n",
+    "#     name=str(model).split('(')[0]\n",
+    "#     score=str(test_score(model))\n",
+    "#     print(name+' - '+score)"
    ]
   },
   {
@@ -322,16 +463,6 @@
    "metadata": {},
    "source": [
     "### Cross Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "train_x_scaled_sel = np.take(train_x_scaled,sel_feat_idx, axis=1)"
    ]
   },
   {
@@ -532,43 +663,43 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import StratifiedKFold,cross_val_score\n",
-    "model_names=['Logistic Regression','SVM']\n",
-    "acc_list=['Validation Accuracy','Test Accuracy']\n",
-    "cv=10\n",
-    "kfd=StratifiedKFold(n_splits=cv)\n",
-    "print(\"Cross Validation on \"+str(cv)+\"Folds\")\n",
-    "df_model_acc=pd.DataFrame(columns=model_names,index=[[0,0],acc_list])\n",
-    "k=0\n",
-    "for train_idx,val_idx in kfd.split(train_x_scaled_sel,train_y):\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# from sklearn.model_selection import StratifiedKFold,cross_val_score\n",
+    "# model_names=['Logistic Regression','SVM']\n",
+    "# acc_list=['Validation Accuracy','Test Accuracy']\n",
+    "# cv=10\n",
+    "# kfd=StratifiedKFold(n_splits=cv)\n",
+    "# print(\"Cross Validation on \"+str(cv)+\"Folds\")\n",
+    "# df_model_acc=pd.DataFrame(columns=model_names,index=[[0,0],acc_list])\n",
+    "# k=0\n",
+    "# for train_idx,val_idx in kfd.split(train_x_scaled_sel,train_y):\n",
     "    \n",
-    "    x_train = np.take(train_x_scaled_sel,train_idx,axis=0)\n",
-    "    x_val = np.take(train_x_scaled_sel,val_idx,axis=0)\n",
-    "    y_train = np.take(train_y,train_idx,axis=0)\n",
-    "    y_val = np.take(train_y,val_idx,axis=0)\n",
-    "    val_accuracies=[]\n",
-    "    test_accuracies=[]\n",
+    "#     x_train = np.take(train_x_scaled_sel,train_idx,axis=0)\n",
+    "#     x_val = np.take(train_x_scaled_sel,val_idx,axis=0)\n",
+    "#     y_train = np.take(train_y,train_idx,axis=0)\n",
+    "#     y_val = np.take(train_y,val_idx,axis=0)\n",
+    "#     val_accuracies=[]\n",
+    "#     test_accuracies=[]\n",
     "    \n",
-    "    for model in models_list:\n",
-    "        history = model.fit(x_train,y_train)\n",
-    "        y_pred = history.predict(x_val)\n",
-    "        val_acc = accuracy_score(y_val,y_pred)\n",
-    "        # print(\"validation acc - \" + str(acc))\n",
+    "#     for model in models_list:\n",
+    "#         history = model.fit(x_train,y_train)\n",
+    "#         y_pred = history.predict(x_val)\n",
+    "#         val_acc = accuracy_score(y_val,y_pred)\n",
+    "#         # print(\"validation acc - \" + str(acc))\n",
     "\n",
-    "        y_pred_test=history.predict(test_x_scaled_sel)\n",
-    "        # y_pred_test=np.where(y_pred_test>0.5,1,0)\n",
-    "        test_acc = accuracy_score(test_y,y_pred_test)\n",
-    "        # print(\"Test acc - \" + str(test_acc))\n",
-    "        val_accuracies.append(val_acc)\n",
-    "        test_accuracies.append(test_acc)\n",
+    "#         y_pred_test=history.predict(test_x_scaled_sel)\n",
+    "#         # y_pred_test=np.where(y_pred_test>0.5,1,0)\n",
+    "#         test_acc = accuracy_score(test_y,y_pred_test)\n",
+    "#         # print(\"Test acc - \" + str(test_acc))\n",
+    "#         val_accuracies.append(val_acc)\n",
+    "#         test_accuracies.append(test_acc)\n",
     "        \n",
-    "    df_model_acc=pd.concat([df_model_acc,\n",
-    "                            pd.DataFrame(columns=model_names,\n",
-    "                                         data=[val_accuracies,test_accuracies],\n",
-    "                                         index=[[k+1,k+1],acc_list])])\n",
-    "    k+=1\n",
-    "df_model_acc[2:]\n",
+    "#     df_model_acc=pd.concat([df_model_acc,\n",
+    "#                             pd.DataFrame(columns=model_names,\n",
+    "#                                          data=[val_accuracies,test_accuracies],\n",
+    "#                                          index=[[k+1,k+1],acc_list])])\n",
+    "#     k+=1\n",
+    "# df_model_acc[2:]\n",
     "    "
    ]
   }
