--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(256, 1644)"
+       "(256, 1029)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
    "source": [
     "### Reducing features using Variance Threshold\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "vt=VarianceThreshold(threshold=0)\n",
+    "vt=VarianceThreshold(threshold=0.4)\n",
     "vt.fit(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt=vt.transform(df_t1_t2.drop(['MGMT','SubjectID'],axis=1))\n",
     "df_t1_t2_vt.shape"
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train size - (204, 1644)\n",
-      "test size - (52, 1644)\n"
+      "train size - (204, 1029)\n",
+      "test size - (52, 1029)\n"
      ]
     }
    ],
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for rfe \n",
     "from sklearn.feature_selection import RFE\n",
     "def rfe_feature_selection(algo,X,y):\n",
-    "  rfe=RFE(estimator=algo,n_features_to_select=1000,step=10).fit(X,y)\n",
+    "  rfe=RFE(estimator=algo).fit(X,y)\n",
     "  rfe_sel_index=rfe.get_support(indices=True)\n",
     "  return rfe_sel_index"
    ]
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1531,)"
+       "(881,)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,25 +307,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.5714285714285714, 0.5961538461538461],\n",
+       "[[0.5714285714285714, 0.5769230769230769],\n",
+       " [0.6190476190476191, 0.5384615384615384],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
-       " [0.5714285714285714, 0.5961538461538461],\n",
-       " [0.5714285714285714, 0.5961538461538461],\n",
-       " [0.6, 0.5961538461538461],\n",
-       " [0.55, 0.5961538461538461],\n",
-       " [0.6, 0.5961538461538461],\n",
-       " [0.55, 0.5961538461538461],\n",
-       " [0.55, 0.5961538461538461],\n",
-       " [0.55, 0.5961538461538461]]"
+       " [0.5714285714285714, 0.5769230769230769],\n",
+       " [0.6, 0.5769230769230769],\n",
+       " [0.55, 0.5769230769230769],\n",
+       " [0.6, 0.5769230769230769],\n",
+       " [0.55, 0.5769230769230769],\n",
+       " [0.6, 0.5769230769230769],\n",
+       " [0.55, 0.5769230769230769]]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.5942307692307691 +/- 0.005769230769230783\n"
+      "Accuracy : 0.5730769230769229 +/- 0.011538461538461534\n"
      ]
     }
    ],
@@ -364,20 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(822,)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# svc_feat_index = rfe_feature_selection(SVC(kernel='linear'), train_x_scaled, train_y)\n",
@@ -401,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,20 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LogisticRegression - 0.5961538461538461\n",
-      "SVC - 0.6153846153846154\n",
-      "DecisionTreeClassifier - 0.5961538461538461\n",
-      "XGBClassifier - 0.5576923076923077\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from sklearn.linear_model import LogisticRegression\n",
     "# from sklearn.tree import DecisionTreeClassifier\n",
@@ -467,9 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-235-c772e36d472f>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-235-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "### List of Models\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -482,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
