--- a/py codes/train_mgmt1.ipynb
+++ b/py codes/train_mgmt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: MGMT, dtype: int64"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "(256, 1042)"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "def rf(x,y):\n",
+    "   select_feat = SelectFromModel(estimator= RandomForestClassifier()).fit(x,y)\n",
+    "   feat_idx = select_feat.get_support(indices=True)\n",
+    "   return feat_idx"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -204,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +261,8 @@
     "    x_val = np.take(train_x_scaled,val_idx,axis=0)\n",
     "    y_train = np.take(train_y,train_idx,axis=0)\n",
     "    y_val = np.take(train_y,val_idx,axis=0)\n",
-    "    cv_sel_idx=rfe_feature_selection(SVC(kernel='linear'),x_train,y_train)\n",
+    "    # cv_sel_idx=rfe_feature_selection(SVC(kernel='linear'),x_train,y_train)\n",
+    "    cv_sel_idx=rf(x_train,y_train)\n",
     "    cv_sel_idx_list.append(cv_sel_idx)\n",
     "    \n",
     "    "
@@ -254,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(903,)"
+       "(968,)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.5714285714285714, 0.5769230769230769],\n",
-       " [0.6190476190476191, 0.5576923076923077],\n",
+       "[[0.5714285714285714, 0.5576923076923077],\n",
+       " [0.6190476190476191, 0.5384615384615384],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
        " [0.5714285714285714, 0.5769230769230769],\n",
        " [0.6, 0.5769230769230769],\n",
@@ -325,7 +341,7 @@
        " [0.55, 0.5769230769230769]]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.5749999999999998 +/- 0.0057692307692307505\n"
+      "Accuracy : 0.571153846153846 +/- 0.01231370045660162\n"
      ]
     }
    ],
@@ -364,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,15 +461,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-248-c772e36d472f>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-19-c772e36d472f>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-248-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-19-c772e36d472f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    from sklearn.\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -689,6 +705,13 @@
     "# df_model_acc[2:]\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
